# LEGO_ev3_compilation

./: .gitignore  Instruction.docx  Makefile  QtSetKits.sh  README.md  archive.sh  main.cpp  newProject.sh
ev3_dev/: main.c  wizard.json
ev3_template_subl/: Makefile  main.c
ev3c-lib/: Makefile
ev3cleti_library/: Makefile  ev3dev.cpp  sound_lib.cpp  test_sound.c
ev3cleti_library/public/: sound.h
install_pack/: EV3.sublime-build  Makefile  common.mk  install.sh  install_key.sh  newProject.sh
install_pack/ev3_proj_template/: CMakeLists.txt  main.c
install_pack/ev3c-lib/: Makefile
install_pack/ev3c_library/: Makefile
install_pack/ev3c_library/src/: ev3c_lcd.c
install_pack/ev3cleti_library/: File.cpp  Makefile  README.md  Thread.cpp  Thread_lib.cpp  button_lib.c  button_lib.cpp  common.cpp  common.mk  device_lib.cpp  ev3dev.cpp  lcd_lib.cpp  led_lib.cpp  motor_lib.cpp  power_info.cpp  power_info_lib.cpp  sensor_lib.cpp  sound_lib.cpp  test_sound.c  timer.cpp
install_pack/ev3cleti_library/binary/: newProject.sh
install_pack/ev3cleti_library/examples/: Makefile  test_button.c  test_lcd.c  test_led.c  test_motor.c  test_power_info.c  test_sensor.c  test_sound.c  test_timer  test_timer.c
install_pack/ev3cleti_library/fonts/: lcd_lib.cpp
install_pack/ev3cleti_library/install/: ev3cleti.mk  main.c  (+1 more)
install_pack/scripts/: distrib.sh  lib_data.sh  repo_packs.sh  subl_qt.sh
not_used/: Makefile  QtSetKits.sh  xmlCreater.py
not_used/ev3_template_qt/: CMakeLists.txt  wizard.json
qtcreator/: devices.xml  profiles.xml  qtversion.xml  toolchains.xml
(+26 files in other folders)
